removed logger comments